<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item android:id="@+id/menu_download"
    	  android:title="@string/download_from_server" />-->
    <!--
    <item android:id="@+id/menu_upload"
    	  android:title="@string/upload_to_server" />
    <item android:id="@+id/menu_export_all"
          android:title="@string/export_all_to_zip" />-->
    
    <item android:id="@+id/menu_add_survey"
    	  android:title="@string/menu_add_survey"> 
 	      <menu>

    	  
 	      	<item android:id="@+id/menu_add_new_survey"
	    	  android:title="@string/addNewSurvey" />
    	  
			<item android:id="@+id/menu_import_database_from_file"
    	 	 android:title="@string/menu_import_database_from_file" />
			
		</menu>
    </item>
    
    <item android:id="@+id/menu_export_data"
    	  android:title="@string/menu_export_data_label"> 
 	      <menu>
	    <item android:id="@+id/menu_backup_database"
	    	  android:title="@string/menu_backup_database" />   
	    <item android:id="@+id/menu_export_all"
				android:title="@string/menu_export_all_to_zip" />			
	   	<!--<item android:id="@+id/menu_export"
				android:title="@string/export_to_xml" />-->
 	      	<!--<item android:id="@+id/menu_import_from_file"
    	  android:title="@string/menu_import_from_xml_file" />--> 
	    </menu>  
    </item>
    
 
    	      
    <item android:id="@+id/menu_settings"
          android:title="@string/settings" />
    
    <item android:id="@+id/menu_about"
          android:title="@string/about" />
    
    <item android:id="@+id/menu_exit"
          android:title="@string/exit" />
    
</menu>